--- a/Fansite/Styles/pkmn.css
+++ b/Fansite/Styles/pkmn.css
@@ -1,6 +1,6 @@
 body {
     background-color: lightblue;
-    background-image: url('pokeball.png');
+    background-image: url('Pokeball.png');
     text-align: center;
 }
 h1 {
