--- a/Survey/styles/survey.css
+++ b/Survey/styles/survey.css
@@ -49,7 +49,7 @@
             background-color: #bad0ff;
             color: #020052;
             padding: 10px 20px;
-            border: 1px solid #ccc;
+            border: 1px solid #020052;
             border-radius: 5px;
             cursor: pointer;
         }
